# test_c_compiler

./: .gitignore  CMakeLists.txt  generator.c  generator.h  lex.yy.c  lexical.l  main.c  makefile  scanner  semantic.c  semantic.h  syntax.c  syntax.h  syntax.tab.c  syntax.tab.h  syntax.y  test  translate.c  translate.h  ts.output  yystype.h
Reports/: report1.md  report2.md
TestCases/: D-2.cmm  D-3.cmm  E-2.cmm  E-3.cmm  Smoke.c  Smoke.cmm
TestCases/ErrorCase/workdir-1/: a.ir  a.s  spim_out
TestCases/ErrorCase/workdir-2/: a.ir  a.s
TestCases/ErrorCase/workdir-3/: a.ir  a.s
TestCases/ErrorCase/workdir-4/: saved_binary.sh
TestCases/ErrorCase/workdir-m/: a.ir  spim_out
irsim/: note.txt
nju-compiler-test/lab1/base/2024/: B-1.txt  B-2.txt  C-1.out  C-2.out
nju-compiler-test/lab2/base/2024/: B-1.txt  B-2.txt
nju-compiler-test/lab3/tests/advance2/: advanced2-A-1.cmm  advanced2-A-100.cmm  advanced2-A-101.cmm  advanced2-A-102.cmm  advanced2-A-107.cmm  advanced2-A-109.cmm  advanced2-A-11.cmm  advanced2-A-110.cmm  advanced2-A-115.cmm  advanced2-A-116.cmm  advanced2-A-118.cmm  advanced2-A-119.cmm  advanced2-A-12.cmm  advanced2-A-120.cmm  advanced2-A-121.cmm  advanced2-A-122.cmm  advanced2-A-124.cmm  advanced2-A-125.cmm  advanced2-A-126.cmm  advanced2-A-128.cmm  advanced2-A-130.cmm  advanced2-A-131.cmm  advanced2-A-132.cmm  advanced2-A-135.cmm  advanced2-A-136.cmm  advanced2-A-137.cmm  advanced2-A-139.cmm  advanced2-A-140.cmm  advanced2-A-142.cmm  advanced2-A-152.cmm  advanced2-A-153.cmm  advanced2-A-155.cmm  advanced2-A-156.cmm  advanced2-A-157.cmm  (+57 more)
(+111 files in other folders)
